# shrimp

./: .env  .rustfmt.toml  Cargo.toml  Procfile  app.json
app/: Cargo.toml  build.rs
app-web/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
app-web/src/components/: navbar.less  navbar.tsx  shorten_input.less  shorten_input.tsx
app-web/src/components/shorten/: button.tsx  clipboard_tooltip.tsx  input.less  input.tsx  shrimp.tsx  textbox.tsx
app-web/src/features/: store.ts
app-web/src/features/shorten/: actions.ts  errors.ts  index.ts  state.ts
app-web/src/hooks/: use_dimensions.ts  use_random_site.ts
app-web/src/pages/: _app.less  _app.tsx  _document.tsx  index.less  index.tsx
app-web/src/resources/data/: sites.json
app-web/src/store/: action.ts  index.ts  state.ts
app-web/src/store/shorten/: reducer.ts  state.ts
app-web/src/store/shorten/actions/: index.ts  shorten_error.ts  shorten_link.ts  shortened_link.ts
app-web/src/theme/: _import.less  variables.less
app-web/src/theme/colors/: _import.less  colors_day.less  colors_night.less
app/src/: app.rs  main.rs  opts.rs  state.rs  yarn.rs
app/src/short/: error.rs  handler.rs  middleware.rs  mod.rs  model.rs  service.rs  validate.rs
src/: main.rs  opts.rs  state.rs
src/short/: handler.rs  middleware.rs  mod.rs
